--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,6 +20,35 @@
             "console": "integratedTerminal",
             "justMyCode": true
         },
+        {
+            "name": "Python: -r ... -u ...",
+            "type": "python",
+            "request": "launch",
+            "program": "postman\\testfromexcel.py",
+            "console": "integratedTerminal",
+            "justMyCode": true,
+            "args": ["-r", "temp\\excel_files\\SO_Travel_Notifications.xlsx", "-u", 
+            "https://t06m5fii71.execute-api.eu-central-1.amazonaws.com/dev/sync/Shipment_Order__c"]
+        },
+        {
+            "name": "Python: -g ... ",
+            "type": "python",
+            "request": "launch",
+            "program": "postman\\testfromexcel.py",
+            "console": "integratedTerminal",
+            "justMyCode": true,
+            "args": ["-g", "temp\\excel_files\\SO_Travel_Notifications.xlsx"]
+        },
+        {
+            "name": "Python: -g -u ...",
+            "type": "python",
+            "request": "launch",
+            "program": "postman\\testfromexcel.py",
+            "console": "integratedTerminal",
+            "justMyCode": true,
+            "args": ["-g", "-u", 
+                     "https://t06m5fii71.execute-api.eu-central-1.amazonaws.com/dev/sync/Shipment_Order__c"]
+        },
 
     ]
 }
