added a file to quickly create jsons from the for

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,10 +22,10 @@
             "args": ["JsonCommands.json"]
         },
         {
-            "name": "Python: test",
+            "name": "Python: CreateJsons",
             "type": "python",
             "request": "launch",
-            "program": "test.py",
+            "program": "create_json_commands.py",
             "console": "integratedTerminal",
             "justMyCode": true
         },
